add sending email functionality after the user registers

--- a/src/views/emails/welcome.ejs
+++ b/src/views/emails/welcome.ejs
@@ -32,8 +32,8 @@
 <body>
   <div class="container">
     <h1>Welcome, <%= firstName %>!</h1>
-    <p>We’re excited to have you on board. Make suer to upload your photo so we get to know you a little better </p>
-    <a href="<%= url %>" class="btn">Upload Photo</a>
+    <p>We’re excited to have you on board. </p>
+    <a href="<%= url %>" class="btn">Verify Your Email address to complete the signup and login into your account</a>
   </div>
 </body>
 </html>
